--- a/digital-assignment-1/index.html
+++ b/digital-assignment-1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Hello! Amaze!</title>
+    <title>Digital Assignment 1</title>
     <script src="js/phaser.js"></script>
     <script src="js/main.js"></script>
 
@@ -65,6 +65,9 @@ State which of the Storymatic themes you used.
 
 <li><strong>Mandated Variety:</strong>
 State which input, randomness, genre, and play style you used in this prototype.
+<ul> Input: Keyboard  </ul>
+<ul> Genre: 2D Platformer </ul>
+<ul> No randomness. </ul>
 </li>
 
 <li><strong>Prototype Goal:</strong>
