--- a/digital-assignment-1/index.html
+++ b/digital-assignment-1/index.html
@@ -49,14 +49,16 @@ Did you make your prototype assets from scratch? Did you borrow them? Cite your 
 Code from the following examples:
 <ul>
 <li><a href = "http://phaser.io/examples/v2/sprites/scale-a-sprite"> Scale a Sprite </a></li>
-<li><a href = "http://phaser.io/examples/v2/animation/multiple-anims"> Multiple Animations </a></li>
+<li><a href = "http://phaser.io/tutorials/making-your-first-phaser-2-game"> Making Your First Phaser 2 Game </a></li>
 <li><a href = "http://phaser.io/examples/v2/camera/smooth-follow"> Smooth Follow </a></li>
+<li><a href = "http://brandonclapp.com/creating-and-importing-a-map-for-phaser-using-tiled/"> Map Tiles 1 </a></li>
+<li><a href = "https://baraujo.net/integrating-tiled-maps-with-phaser/"> Map Tiles 2 </a></li>
 </ul>
 Name of Game inspired by Robot Wants Kitty.
 </li>
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+Help the hungry cat find cans of tuna!
 </li>
 
 <li><strong>Theme:</strong>
