--- a/digital-assignment-1/index.html
+++ b/digital-assignment-1/index.html
@@ -35,13 +35,16 @@ For a prototype/first game attempt, a camera that follows the player / world tha
 
 <li><strong>Prototype Postmortem:</strong>
 What did you learn from this prototype?
+<ul> I learned a lot of what I believe are basics of Phaser. </ul>
 What was the easiest or hardest part of making it?
+<ul> Due to the premade engine, physics and jumping were the easiest part.   However, the hardest part was definitely trying to make the map using JSON files and exporting via Tiled, a different program.
 </li>
 
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
 <li>Cat spritesheet extracted from gif: <a href = "https://www.artstation.com/artwork/6JXWw">Cat Gif</a></li>
+<li>Crunch mp3 from: <a href = ""> </a></li>
 </ul>
 </li>
 
@@ -74,31 +77,39 @@ State which input, randomness, genre, and play style you used in this prototype.
 
 <li><strong>Prototype Goal:</strong>
 What game mechanic is this prototype evaluating?
+<ul> 	</ul>
 </li>
 
 <li><strong>Player Experience Goals:</strong>
 What experience do you want players to have when playing your game?
+<ul> I want the player to have an open and imaginative mind, picturing what the cat sees and feels. </ul>
 </li>
 
 <li><strong>Gameplay:</strong>
 A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+<ul> The player can jump and move to the left and right. </ul>
 </li>
 
 <li><strong>Strategies:</strong>
 What player strategies do you expect will be effective at playing this game?
+<ul> Coordination and timing is necessary to navigate the platforms. </ul>
 </li>
 
 <li><strong>Story/Setting/Premise:</strong>
 A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, mention it here. If the game is abstract, then say so.
 How will the dramatic tension interact with the gameplay tension?
+<ul> Spending the last few days exploring further and further from your home, you find yourself lost!   Hours pass and your stomach starts to rumble.   You're getting hungry...  But suddenly, you stumble upon a large grey building with a sweet smell.  Your stomach rumbles and you find that you have lost control of what is real and what is not. </ul>
+
 </li>
 
 <li><strong>Target Audience:</strong>
 A single sentence that describes the demographic you're trying to reach.
+<ul> Gamers who enjoy platformers and cute things. </ul>
 </li>
 
 <li><strong>Play Time:</strong>
 How long does your game take to play?
+<ul> Two minutes </ul>
 </li>
 
 </ul>
