Finishing index.html

--- a/digital-assignment-1/index.html
+++ b/digital-assignment-1/index.html
@@ -37,14 +37,14 @@ For a prototype/first game attempt, a camera that follows the player / world tha
 What did you learn from this prototype?
 <ul> I learned a lot of what I believe are basics of Phaser. </ul>
 What was the easiest or hardest part of making it?
-<ul> Due to the premade engine, physics and jumping were the easiest part.   However, the hardest part was definitely trying to make the map using JSON files and exporting via Tiled, a different program.
+<ul> Due to the premade engine, physics and jumping were the easiest part.   However, the hardest part was definitely trying to make the map using JSON files and exporting via Tiled, a different program. </ul>
 </li>
 
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
 <li>Cat spritesheet extracted from gif: <a href = "https://www.artstation.com/artwork/6JXWw">Cat Gif</a></li>
-<li>Crunch mp3 from: <a href = ""> </a></li>
+<li>Crunch mp3 found: <a href = "https://www.audioblocks.com/stock-audio/snack-crunching.html"> here </a></li>
 </ul>
 </li>
 
@@ -98,7 +98,7 @@ What player strategies do you expect will be effective at playing this game?
 <li><strong>Story/Setting/Premise:</strong>
 A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, mention it here. If the game is abstract, then say so.
 How will the dramatic tension interact with the gameplay tension?
-<ul> Spending the last few days exploring further and further from your home, you find yourself lost!   Hours pass and your stomach starts to rumble.   You're getting hungry...  But suddenly, you stumble upon a large grey building with a sweet smell.  Your stomach rumbles and you find that you have lost control of what is real and what is not. </ul>
+<ul> Spending the last few days exploring further and further from your home, you find yourself lost!   Hours pass and your stomach starts to rumble.   You're getting hungry...  But suddenly, you stumble upon a large grey building with a sweet smell.  Your stomach rumbles and you find that you have lost control of what is real and what is not. Satisfy your appetite by exploring the tuna factory by scaling heights and traverse across machinery in gravity-defying leaps. </ul>
 
 </li>
 
