--- a/digital-assignment-2/index.html
+++ b/digital-assignment-2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Digital Assignment 1</title>
+    <title>Digital Assignment 2</title>
     <script src="js/phaser.js"></script>
     <script src="js/main.js"></script>
 
@@ -26,25 +26,25 @@ body
 
 <ul>
 <li><strong>Originality:</strong>
-This game was a unique idea from a friend.
+This game was an idea modified from the game, "<a href = 
+"https://www.fantasyflightgames.com/en/products/eldritch-horror/">Eldritch Horror</a>"
 </li>
 
 <li><strong>Technical Merit:</strong>
-For a prototype/first game attempt, a camera that follows the player / world that extends past camera view.  And using a gif to frame a spritesheet.
+State-based gameplay, turn-based input.
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
 What did you learn from this prototype?
-<ul> I learned a lot of what I believe are basics of Phaser. </ul>
+<ul> I learned how to implement a state-based game. </ul>
 What was the easiest or hardest part of making it?
-<ul> Due to the premade engine, physics and jumping were the easiest part.   However, the hardest part was definitely trying to make the map using JSON files and exporting via Tiled, a different program. </ul>
+<ul>  </ul>
 </li>
 
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
-<li>Cat spritesheet extracted from gif: <a href = "https://www.artstation.com/artwork/6JXWw">Cat Gif</a></li>
-<li>Crunch mp3 found: <a href = "https://www.audioblocks.com/stock-audio/snack-crunching.html"> here </a></li>
+<li> All assets were created by me. </li>
 </ul>
 </li>
 
