--- a/digital-assignment-2/index.html
+++ b/digital-assignment-2/index.html
@@ -22,7 +22,7 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Cat Wants Tuna</h2>
+<h2> Countdown </h2>
 
 <ul>
 <li><strong>Originality:</strong>
@@ -31,12 +31,12 @@ This game was an idea modified from the game, "<a href =
 </li>
 
 <li><strong>Technical Merit:</strong>
-State-based gameplay, turn-based input.
+ Turn-based input.
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
 What did you learn from this prototype?
-<ul> I learned how to implement a state-based game. </ul>
+<ul>  </ul>
 What was the easiest or hardest part of making it?
 <ul>  </ul>
 </li>
@@ -44,24 +44,20 @@ What was the easiest or hardest part of making it?
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
-<li> All assets were created by me. </li>
+<li> Audio clip </li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
 Code from the following examples:
 <ul>
-<li><a href = "http://phaser.io/examples/v2/sprites/scale-a-sprite"> Scale a Sprite </a></li>
-<li><a href = "http://phaser.io/tutorials/making-your-first-phaser-2-game"> Making Your First Phaser 2 Game </a></li>
-<li><a href = "http://phaser.io/examples/v2/camera/smooth-follow"> Smooth Follow </a></li>
-<li><a href = "http://brandonclapp.com/creating-and-importing-a-map-for-phaser-using-tiled/"> Map Tiles 1 </a></li>
 <li><a href = "https://baraujo.net/integrating-tiled-maps-with-phaser/"> Map Tiles 2 </a></li>
 </ul>
-Name of Game inspired by Robot Wants Kitty.
+
 </li>
 
 <li><strong>High Concept:</strong>
-Help the hungry cat find cans of tuna!
+
 </li>
 
 <li><strong>Theme:</strong>
@@ -70,9 +66,9 @@ State which of the Storymatic themes you used.
 
 <li><strong>Mandated Variety:</strong>
 State which input, randomness, genre, and play style you used in this prototype.
-<ul> Input: Keyboard  </ul>
-<ul> Genre: 2D Platformer </ul>
-<ul> No randomness. </ul>
+<ul> Input: Mouse  </ul>
+<ul> Genre: Tabletop </ul>
+<ul> Card draw randomness. </ul>
 </li>
 
 <li><strong>Prototype Goal:</strong>
@@ -82,7 +78,7 @@ What game mechanic is this prototype evaluating?
 
 <li><strong>Player Experience Goals:</strong>
 What experience do you want players to have when playing your game?
-<ul> I want the player to have an open and imaginative mind, picturing what the cat sees and feels. </ul>
+<ul> I want the player to have an open and imaginative mind, using the clues as hints to solve the game. </ul>
 </li>
 
 <li><strong>Gameplay:</strong>
