--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ body
 
 <ol>
 <li><a href="digital-assignment-1">Cat Wants Tuna</a></li>
-<li> Digital Assignment 2 - Pass </li>
+<li> Countdown - Pass </li>
+<li> Digital Assignment </li>
 </ol>
 
 
