--- a/digital-assignment-3/index.html
+++ b/digital-assignment-3/index.html
@@ -10,6 +10,8 @@
 	<script src="js/Preloader.js"></script>
 	<script src="js/MainMenu.js"></script>
 	<script src="js/Game.js"></script>
+	<script src="js/WinScreen.js"></script>	
+	<script src="js/LoseScreen.js"></script>
 	<!-- main.js must come last since it references the other ones. -->
 	<script src="js/main.js"></script>
 
@@ -29,7 +31,7 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2> Countdown </h2>
 
 <ul>
 <li><strong>Originality:</strong>
@@ -48,18 +50,22 @@ What was the easiest or hardest part of making it?
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
-<li>Loading screen: self-made</li>
-<li>Puppy image: self-made</li>
+<li>Loading screen: Phaser example</li>
 <li>Button: Phaser example <a href="https://phaser.io/examples/v2/buttons/action-on-click">Action On Click</a></li>
 <li>Bouncing Phaser image: <a href="https://phaser.io/download/logo">Phaser logo</a></li>
+<li>A bullet hell</li>
 <li>Music: "Poppers and Prosecco" Kevin MacLeod (<a href="incompetech.com">incompetech.com</a>). Licensed under <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons: By Attribution 3.0 License</a></li>
+
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
 Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
 <ul>
-<li>The code for this example is adapted from the <a href="https://github.com/photonstorm/phaser/tree/v2.6.2/resources/Project%20Templates/Basic">Phaser Basic Project Template</a></li>
+<li> Countdown Timer: <a href="https://stackoverflow.com/questions/52063815/how-to-add-countdown-timer-to-phaser-game"> Stackoverflow post </a></li>
+<li> Add Sprite to Group: <a href = "https://phaser.io/examples/v2/groups/add-a-sprite-to-group"> Here </a></li>
+<li> Letter spawning, object collision <a href = "https://github.com/photonstorm/phaser-examples/blob/master/examples/text/bitmaptext%20with%20physics.js"> Here </a> and <a href = "https://phaser.io/examples/v2/input/group-input-events"> here </a></li>
+<li> Bitmap stuff: <a href = ""> Here </a></li>
 </ul>
 </li>
 
