--- a/digital-assignment-4/index.html
+++ b/digital-assignment-4/index.html
@@ -10,9 +10,10 @@
 	<script src="js/Preloader.js"></script>
 	<script src="js/Room.js"></script>	
 	<script src="js/MainMenu.js"></script>
-	<script src="js/LevelSelect.js"></script>
+	<script src="js/Stats.js"></script>
 	<script src="js/Story.js"></script>
 	<!--<script src="js/Game.js"></script>
+	<script src="js/LevelSelect.js"></script>
 	<script src="js/Endless.js"></script> -->
 	
 	<!-- main.js must come last since it references the other ones. -->
