--- a/digital-assignment-4/index.html
+++ b/digital-assignment-4/index.html
@@ -12,6 +12,7 @@
 	<script src="js/MainMenu.js"></script>
 	<script src="js/Stats.js"></script>
 	<script src="js/Story.js"></script>
+	<script src="js/PostScreen.js"></script>
 	<!--<script src="js/Game.js"></script>
 	<script src="js/LevelSelect.js"></script>
 	<script src="js/Endless.js"></script> -->
