--- a/digital-assignment-4/index.html
+++ b/digital-assignment-4/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8" />
-	<title>Phaser Basic Project Template</title>
+	<title> Cat Wants Tuna v2 </title>
 	<script src="js/phaser.min.js"></script>
 	<!-- Boot.js must come first since it creates the BasicGame object
 	that stores all the states. -->
@@ -45,26 +45,26 @@ What is original about your game?
 
 <li><strong>Technical Merit:</strong>
 What is interesting about your game technology?
+Gamestates on top of original code
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
 What did you learn from this prototype?
 What was the easiest or hardest part of making it?
+Getting the multiple layers to work, switching between states.
 </li>
 
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
-<li>Loading screen: self-made</li>
-<li>Puppy image: self-made</li>
-<li>Bouncing Phaser image: <a href="https://phaser.io/download/logo">Phaser logo</a></li>
+<li> All sounds and art assets are self-made. </li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
 Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
 <ul>
-<li>The code for this example is adapted from the <a href="https://github.com/photonstorm/phaser/tree/v2.6.2/resources/Project%20Templates/Basic">Phaser Basic Project Template</a></li>
+<li>The code for this example is adapted from the original <a href="https://khuynh1123.github.io/cs325-game-prototypes/digital-assignment-4/"> Cat Wants Tuna </a></li>
 <li>Pause code: <a href = "https://phaser.io/examples/v2/misc/pause-menu"> Here </a></li>
 
 </ul>
@@ -76,14 +76,18 @@ A one-sentence summary of your game.
 
 <li><strong>Theme:</strong>
 State which of the Storymatic themes you used.
+<ul> Animal That Can't Stop Thinking About That Dream From Last Night. </ul>
 </li>
 
 <li><strong>Mandated Variety:</strong>
 State which input, randomness, genre, and play style you used in this prototype.
+<ul> Input: Keyboard </ul>
+<ul> Genre: Platformer </ul>
 </li>
 
 <li><strong>Prototype Goal:</strong>
 What game mechanic is this prototype evaluating?
+<ul> UI and gamestate elements </ul>
 </li>
 
 <li><strong>Player Experience Goals:</strong>
