Forgot to update index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body
 <li><a href="digital-assignment-1">Cat Wants Tuna</a></li>
 <li><a></a> Countdown - Pass </li>
 <li><a href = "digital-assignment-3"> Alpha Space </a></li>
+<li><a href = "digital-assignment-4"> Cat Wants Tuna v2 </a></li>
 </ol>
 
 
