--- a/digital-assignment-5/index.html
+++ b/digital-assignment-5/index.html
@@ -60,6 +60,7 @@ Did you make your prototype assets from scratch? Did you borrow them? Cite your 
 Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
 <ul>
 <li>The code for this example is adapted from the <a href="https://github.com/photonstorm/phaser/tree/v2.6.2/resources/Project%20Templates/Basic">Phaser Basic Project Template</a></li>
+<li> Help Box code adapted from: <a href="https://phasergames.com/adding-message-box-phaser-games/"> Here </a> </li>
 </ul>
 </li>
 
