--- a/digital-assignment-5/index.html
+++ b/digital-assignment-5/index.html
@@ -29,11 +29,12 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2> Countdown</h2>
 
 <ul>
 <li><strong>Originality:</strong>
 What is original about your game?
+<ul> It is an original board game. </ul>
 </li>
 
 <li><strong>Technical Merit:</strong>
@@ -48,32 +49,32 @@ What was the easiest or hardest part of making it?
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
-<li>Loading screen: self-made</li>
-<li>Puppy image: self-made</li>
-<li>Button: Phaser example <a href="https://phaser.io/examples/v2/buttons/action-on-click">Action On Click</a></li>
-<li>Bouncing Phaser image: <a href="https://phaser.io/download/logo">Phaser logo</a></li>
-<li>Music: "Poppers and Prosecco" Kevin MacLeod (<a href="incompetech.com">incompetech.com</a>). Licensed under <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons: By Attribution 3.0 License</a></li>
+<li> All art assets were created by me. </li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
 Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
-<ul>
-<li>The code for this example is adapted from the <a href="https://github.com/photonstorm/phaser/tree/v2.6.2/resources/Project%20Templates/Basic">Phaser Basic Project Template</a></li>
-<li> Help Box code adapted from: <a href="https://phasergames.com/adding-message-box-phaser-games/"> Here </a> </li>
+<ul> Inspired by Eldritch Horror </ul>
+<ul> This game is a reiteration of my <a href = "/../digital-assignment-2"> game from week 2 </a> that I ended up passing. </ul>
+
 </ul>
 </li>
 
 <li><strong>High Concept:</strong>
 A one-sentence summary of your game.
+<ul> Traverse the map to collect materials and clues to stop the end of the world. </ul>
 </li>
 
 <li><strong>Theme:</strong>
 State which of the Storymatic themes you used.
+<ul> N/A </ul>
 </li>
 
 <li><strong>Mandated Variety:</strong>
 State which input, randomness, genre, and play style you used in this prototype.
+<ul> Input: Mouse </ul>
+<ul> Randomness: Dice rolling (1-6), card shuffling </ul>
 </li>
 
 <li><strong>Prototype Goal:</strong>
@@ -82,6 +83,7 @@ What game mechanic is this prototype evaluating?
 
 <li><strong>Player Experience Goals:</strong>
 What experience do you want players to have when playing your game?
+<ul> This game is unfinished. </ul>
 </li>
 
 <li><strong>Gameplay:</strong>
@@ -99,10 +101,12 @@ How will the dramatic tension interact with the gameplay tension?
 
 <li><strong>Target Audience:</strong>
 A single sentence that describes the demographic you're trying to reach.
+<ul> Fans of puzzle and board games </ul>
 </li>
 
 <li><strong>Play Time:</strong>
 How long does your game take to play?
+<ul> 5 to 10 minutes </ul>
 </li>
 
 </ul>
