--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body
 <li><a></a> Countdown - Pass </li>
 <li><a href = "digital-assignment-3"> Alpha Space </a></li>
 <li><a href = "digital-assignment-4"> Cat Wants Tuna v2 </a></li>
-<!--<li><a href = "digital-assignment-5"> </a></li>-->
+<li><a href = "digital-assignment-5"> Countdown v2 </a></li>
 
 </ol>
 
