--- a/digital-assignment-5/index.html
+++ b/digital-assignment-5/index.html
@@ -56,7 +56,7 @@ Did you make your prototype assets from scratch? Did you borrow them? Cite your 
 <li><strong>Prototype Closest Other Game:</strong>
 Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
 <ul> Inspired by Eldritch Horror </ul>
-<ul> This game is a reiteration of my <a href = "/../digital-assignment-2"> game from week 2 </a> that I ended up passing. </ul>
+<ul> This game is a reiteration of my <a href = "/../cs325-game-prototypes/digital-assignment-2"> game from week 2 </a> that I ended up passing. </ul>
 
 </ul>
 </li>
