--- a/digital-assignment-5/index.html
+++ b/digital-assignment-5/index.html
@@ -38,12 +38,21 @@ What is original about your game?
 </li>
 
 <li><strong>Technical Merit:</strong>
-What is interesting about your game technology?
+<ul>
+<li> Turn-based input. </li>
+<li> Overlaid message boxes. </li>
+<li> Map traversal effects (countdown decrements, obtaining materials and clues). </li>
+</ul>
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
 What did you learn from this prototype?
 What was the easiest or hardest part of making it?
+<ul>
+<li> How to scale sprites. </li>
+<li> Modifying groups and children. </li>
+<li> The necessary steps to overlay boxes above other assets. </li>
+</ul>
 </li>
 
 <li><strong>Prototype Assets:</strong>
@@ -55,9 +64,9 @@ Did you make your prototype assets from scratch? Did you borrow them? Cite your 
 
 <li><strong>Prototype Closest Other Game:</strong>
 Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
-<ul> Inspired by Eldritch Horror </ul>
-<ul> This game is a reiteration of my <a href = "/../cs325-game-prototypes/digital-assignment-2"> game from week 2 </a> that I ended up passing. </ul>
-
+<ul>
+<li> Inspired by Eldritch Horror </li>
+<li> This game is a reiteration of my <a href = "/../cs325-game-prototypes/digital-assignment-2"> game from week 2 </a> that I ended up passing. </li>
 </ul>
 </li>
 
