Add DA6, remove some online tutorials

--- a/digital-assignment-6/index.html
+++ b/digital-assignment-6/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8" />
-	<title>Phaser Basic Project Template</title>
+	<title> Paws Off! </title>
 	<script src="js/phaser.min.js"></script>
-	<script src="/socket.io/socket.io.js"></script>
 	<!-- Boot.js must come first since it creates the BasicGame object
 	that stores all the states. -->
 	<script src="js/Boot.js"></script>
@@ -13,7 +12,6 @@
 	<script src="js/Game.js"></script>
 	<!-- main.js must come last since it references the other ones. -->
 	<script src="js/main.js"></script>
-	<script src="js/client.js"></script>
 
 <style>
 body
@@ -31,61 +29,42 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2> Countdown</h2>
+<h2>Your game title</h2>
 
 <ul>
 <li><strong>Originality:</strong>
 What is original about your game?
-<ul> It is an original board game. </ul>
 </li>
 
 <li><strong>Technical Merit:</strong>
-<ul>
-<li> Turn-based input. </li>
-<li> Overlaid message boxes. </li>
-<li> Map traversal effects (countdown decrements, obtaining materials and clues). </li>
-</ul>
+What is interesting about your game technology?
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
 What did you learn from this prototype?
 What was the easiest or hardest part of making it?
-<ul>
-<li> How to scale sprites. </li>
-<li> Modifying groups and children. </li>
-<li> The necessary steps to overlay boxes above other assets. </li>
-</ul>
 </li>
 
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
-<li> All art assets were created by me. </li>
-</ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
 Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
-<ul>
-<li> Inspired by Eldritch Horror </li>
-<li> This game is a reiteration of my <a href = "/../cs325-game-prototypes/digital-assignment-2"> game from week 2 </a> that I ended up passing. </li>
-</ul>
+<ul></ul>
 </li>
 
 <li><strong>High Concept:</strong>
 A one-sentence summary of your game.
-<ul> Traverse the map to collect materials and clues to stop the end of the world. </ul>
 </li>
 
 <li><strong>Theme:</strong>
 State which of the Storymatic themes you used.
-<ul> N/A </ul>
 </li>
 
 <li><strong>Mandated Variety:</strong>
 State which input, randomness, genre, and play style you used in this prototype.
-<ul> Input: Mouse </ul>
-<ul> Randomness: Dice rolling (1-6), card shuffling </ul>
 </li>
 
 <li><strong>Prototype Goal:</strong>
@@ -94,7 +73,6 @@ What game mechanic is this prototype evaluating?
 
 <li><strong>Player Experience Goals:</strong>
 What experience do you want players to have when playing your game?
-<ul> This game is unfinished. </ul>
 </li>
 
 <li><strong>Gameplay:</strong>
@@ -112,12 +90,10 @@ How will the dramatic tension interact with the gameplay tension?
 
 <li><strong>Target Audience:</strong>
 A single sentence that describes the demographic you're trying to reach.
-<ul> Fans of puzzle and board games </ul>
 </li>
 
 <li><strong>Play Time:</strong>
 How long does your game take to play?
-<ul> 5 to 10 minutes </ul>
 </li>
 
 </ul>
