--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body
 <li><a href = "digital-assignment-3"> Alpha Space </a></li>
 <li><a href = "digital-assignment-4"> Cat Wants Tuna v2 </a></li>
 <li><a href = "digital-assignment-5"> Countdown v2 </a></li>
-
+<li><a></a> Paws Off! v1 - Pass </li>
 </ol>
 
 
