--- a/digital-assignment-6/index.html
+++ b/digital-assignment-6/index.html
@@ -5,7 +5,7 @@
 	<title> Paws Off! </title>
 	<script src="js/phaser.min.js"></script>
 	<!-- Boot.js must come first since it creates the BasicGame object
-	that stores all the states. -->
+	that stores all the states. --> 
 	<script src="js/Boot.js"></script>
 	<script src="js/Preloader.js"></script>
 	<script src="js/MainMenu.js"></script>
@@ -29,7 +29,7 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2> Paws Off! </h2>
 
 <ul>
 <li><strong>Originality:</strong>
