--- a/digital-assignment-6/index.html
+++ b/digital-assignment-6/index.html
@@ -27,76 +27,84 @@ body
 
 </head>
 <body>
-<div id="game"></div>
-<div id="readme">
-<h2> Paws Off! </h2>
+	<div id="game"></div>
+	<div id="readme">
+	<h2> Paws Off! </h2>
 
-<ul>
-<li><strong>Originality:</strong>
-What is original about your game?
-</li>
+	<ul>
+	<li><strong>Originality:</strong>
+	What is original about your game?
+	</li>
 
-<li><strong>Technical Merit:</strong>
-What is interesting about your game technology?
-</li>
+	<li><strong>Technical Merit:</strong>
+	What is interesting about your game technology?
+	<ul> Using JSON files to store textures </ul>
 
-<li><strong>Prototype Postmortem:</strong>
-What did you learn from this prototype?
-What was the easiest or hardest part of making it?
-</li>
+	</li>
 
-<li><strong>Prototype Assets:</strong>
-Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
-<ul>
-</li>
+	<li><strong>Prototype Postmortem:</strong>
+	What did you learn from this prototype?
+	What was the easiest or hardest part of making it?
+	<ul> Learned how JavaScript classes work </ul>
+	<ul> Learned how to load JSON files in Phaser </ul>
+	</li>
 
-<li><strong>Prototype Closest Other Game:</strong>
-Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
-<ul></ul>
-</li>
+	<li><strong>Prototype Assets:</strong>
+	Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
+	<ul> All art assets created by <a href = "https://www.deviantart.com/miraku-memo"> miraku-memo </a></ul>
+	</li>
 
-<li><strong>High Concept:</strong>
-A one-sentence summary of your game.
-</li>
+	<li><strong>Prototype Closest Other Game:</strong>
+	Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
+	<ul> Modified game concept from Sushi Go or Go Nuts for Donuts by <a href = "https://www.deviantart.com/miraku-memo"> miraku-memo </a> </ul>
+	<ul> Used Fisher-Yates shuffle algorithm posted: <a href = "https://stackoverflow.com/questions/6274339/how-can-i-shuffle-an-array"> Here </a> </ul>
+	</li>
 
-<li><strong>Theme:</strong>
-State which of the Storymatic themes you used.
-</li>
+	<li><strong>High Concept:</strong>
+	A one-sentence summary of your game.
+	<ul> Collect the most points through dessert-based cards to win. </ul>
+	</li>
 
-<li><strong>Mandated Variety:</strong>
-State which input, randomness, genre, and play style you used in this prototype.
-</li>
+	<li><strong>Theme:</strong>
+	State which of the Storymatic themes you used.
+	</li>
 
-<li><strong>Prototype Goal:</strong>
-What game mechanic is this prototype evaluating?
-</li>
+	<li><strong>Mandated Variety:</strong>
+	State which input, randomness, genre, and play style you used in this prototype.
+	<ul> Randomness: Player selection, deck shuffling. </ul>
+	<ul> Genre: Family, multiplayer, card game
+	</li>
 
-<li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
-</li>
+	<li><strong>Prototype Goal:</strong>
+	What game mechanic is this prototype evaluating?
+	</li>
 
-<li><strong>Gameplay:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
-</li>
+	<li><strong>Player Experience Goals:</strong>
+	What experience do you want players to have when playing your game?
+	</li>
 
-<li><strong>Strategies:</strong>
-What player strategies do you expect will be effective at playing this game?
-</li>
+	<li><strong>Gameplay:</strong>
+	A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+	</li>
 
-<li><strong>Story/Setting/Premise:</strong>
-A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, mention it here. If the game is abstract, then say so.
-How will the dramatic tension interact with the gameplay tension?
-</li>
+	<li><strong>Strategies:</strong>
+	What player strategies do you expect will be effective at playing this game?
+	</li>
 
-<li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
-</li>
+	<li><strong>Story/Setting/Premise:</strong>
+	A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, mention it here. If the game is abstract, then say so.
+	How will the dramatic tension interact with the gameplay tension?
+	</li>
 
-<li><strong>Play Time:</strong>
-How long does your game take to play?
-</li>
+	<li><strong>Target Audience:</strong>
+	A single sentence that describes the demographic you're trying to reach.
+	</li>
 
-</ul>
-</div>
+	<li><strong>Play Time:</strong>
+	How long does your game take to play?
+	</li>
+
+	</ul>
+	</div>
 </body>
 </html>
